@@ -10,8 +10,8 @@ begin
 rescue LoadError
   # OK, just skip
 else
-  $FIXNUM_MAX = RbConfig::Limits["FIXNUM_MAX"]
-  $FIXNUM_MIN = RbConfig::Limits["FIXNUM_MIN"]
+  $FIXNUM_MAX = RbConfig::LIMITS["FIXNUM_MAX"]
+  $FIXNUM_MIN = RbConfig::LIMITS["FIXNUM_MIN"]
 end
 
 fsl   = { frozen_string_literal: true } # used later
